--- a/src/app/profile/footer/footer.component.html
+++ b/src/app/profile/footer/footer.component.html
@@ -1,23 +1,6 @@
 <footer class="footer">
-  <div class="container text-center">
-    <a
-      class="cc-twitter btn btn-link"
-      href="https://twitter.com/jGoodIdea"
-      target="_blank"
-    >
-      <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
-    </a>
-
-    <a
-      class="cc-github btn btn-link"
-      href="https://github.com/gitproman0211"
-      target="_blank"
-    >
-      <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-    </a>
-  </div>
   <div class="text-center text-muted">
-    <p>&copy; 2022 jgoodidea.netlify.net.app | portfolio.</p>
+    <p>&copy; 2023 portfolio.</p>
     <p>v.1.0.0 | <b>Powered by</b> JGoodIdea</p>
   </div>
 </footer>
