--- a/src/app/profile/header/header.component.html
+++ b/src/app/profile/header/header.component.html
@@ -6,7 +6,9 @@
     >
       <div class="container">
         <div class="navbar-translate">
-          <a class="navbar-brand" href="#" rel="tooltip">JGoodIdea</a>
+          <a class="navbar-brand" href="#" rel="tooltip">
+            <img src="assets/images/logo.png" height="32" />
+          </a>
           <button
             class="navbar-toggler navbar-toggler"
             type="button"
@@ -30,23 +32,14 @@
               <a class="nav-link smooth-scroll" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#experience"
-                >Experience</a
-              >
-            </li>
-
-            <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#skill">Skills</a>
             </li>
-
-            <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#education">Education</a>
-            </li>
-
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a>
             </li>
-
+            <li class="nav-item">
+              <a class="nav-link smooth-scroll" href="#experience">Experience</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#contact">Contact</a>
             </li>
