--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,15 +1,15 @@
 <app-header></app-header>
 <div class="page-content">
-  <app-intro></app-intro>
-  <app-about></app-about>
-  <app-experience></app-experience>
+  <app-intro [data]="getIntroData()"></app-intro>
+  <app-about [data]="getAboutData()"></app-about>
+  <app-skills [data]="getSkills()"></app-skills>
+  <app-portfolio [data]="getPortfolioData()"></app-portfolio>
+  <app-experience [data]="getHistory()"></app-experience>
   <!-- <app-projects></app-projects> -->
-  <app-skills></app-skills>
-  <app-education></app-education>
-  <app-portfolio></app-portfolio>
+  <!-- <app-education></app-education> -->
   <!-- <app-reference></app-reference> -->
-  <app-viewas></app-viewas>
-  <app-contact></app-contact>
+  <!-- <app-viewas></app-viewas> -->
+  <app-contact [data]="getContactInfo()"></app-contact>
 </div>
 <app-footer></app-footer>
-<!-- <ngx-spinner bdColor="rgba(255,255,255,1)" size="medium" color="#033d5b" type="ball-spin-clockwise"></ngx-spinner> -->
+<ngx-spinner type="ball-scale-multiple" bdColor="rgba(3,61,91,50%)"></ngx-spinner>
