--- a/src/app/profile/skills/skills.component.html
+++ b/src/app/profile/skills/skills.component.html
@@ -2,15 +2,20 @@
   <div class="container">
     <div class="h4 text-center mb-4 title">Skills</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-      <div class="card-body">
-        <div class="skill-panel">
-          <div class="skill-card" *ngFor="let skill of skills">
-            <div>
-              <img src="{{ skill.image }}" alt="nodejs" width="60" height="60" />
+      <div class="card-body row">
+        <div class="col-lg-10 col-md-9 col-sm-8 col-xs-12">
+          <div class="skill-panel">
+            <div class="skill-card skill-tooltip" *ngFor="let skill of getSkills()" placement="top" data-toggle="tooltip" title="{{ skill.name }}" (mouseenter)="setCurrent(skill.name)" (mouseleave)="setCurrent('')">
+              <div>
+                <img src="{{ imageUrl(skill.image) }}" alt="{{ skill.name }}" width="100%" height="100%" />
+              </div>
             </div>
-            <span>{{ skill.skill }}</span>
           </div>
         </div>
+        <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+          <div class="skill-content">
+            <span>{{ currentSkill }}</span>
+          </div>
       </div>
     </div>
   </div>
