--- a/src/app/profile/skills/skills.component.html
+++ b/src/app/profile/skills/skills.component.html
@@ -7,7 +7,7 @@
           <div class="skill-panel">
             <div class="skill-card skill-tooltip" *ngFor="let skill of getSkills()" placement="top" data-toggle="tooltip" title="{{ skill.name }}" (mouseenter)="setCurrent(skill.name)" (mouseleave)="setCurrent('')">
               <div>
-                <img src="{{ imageUrl(skill.image) }}" alt="{{ skill.name }}" width="100%" height="100%" />
+                <img src="{{ skill.image !== null ? imageUrl(skill.image) : 'assets/images/skill-default.png' }}" alt="{{ skill.name }}" width="100%" height="100%" />
               </div>
             </div>
           </div>
